--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -621,6 +621,18 @@ a {
   top: -3rem;
 }
 
+.left-20 {
+  left: 5rem;
+}
+
+.left-6 {
+  left: 1.5rem;
+}
+
+.-top-16 {
+  top: -4rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -640,6 +652,10 @@ a {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mb-24 {
+  margin-bottom: 6rem;
 }
 
 .block {
@@ -1059,6 +1075,10 @@ a {
   transition-duration: 500ms;
 }
 
+.file\:w-24::file-selector-button {
+  width: 6rem;
+}
+
 .hover\:bg-rose-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(225 29 72 / var(--tw-bg-opacity));
@@ -1132,7 +1152,33 @@ a {
   opacity: 0.5;
 }
 
+@media (min-width: 640px) {
+  .sm\:-top-8 {
+    top: -2rem;
+  }
+
+  .sm\:-top-16 {
+    top: -4rem;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:-top-8 {
+    top: -2rem;
+  }
+
+  .md\:-top-16 {
+    top: -4rem;
+  }
+
+  .md\:-top-12 {
+    top: -3rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1145,6 +1191,10 @@ a {
     display: none;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:basis-1\/2 {
     flex-basis: 50%;
   }
@@ -1153,12 +1203,28 @@ a {
     flex-basis: 25%;
   }
 
+  .md\:basis-1\/3 {
+    flex-basis: 33.333333%;
+  }
+
+  .md\:basis-2\/3 {
+    flex-basis: 66.666667%;
+  }
+
   .md\:pl-0 {
     padding-left: 0px;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
+  .lg\:bottom-0 {
+    bottom: 0px;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1193,6 +1259,10 @@ a {
 
   .lg\:basis-1\/3 {
     flex-basis: 33.333333%;
+  }
+
+  .lg\:basis-1\/2 {
+    flex-basis: 50%;
   }
 
   .lg\:flex-row {
