--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -573,6 +573,10 @@ a {
   bottom: -1rem;
 }
 
+.-top-16 {
+  top: -4rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -589,48 +593,28 @@ a {
   left: 2.5rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-48 {
-  top: 12rem;
-}
-
-.bottom-48 {
-  bottom: 12rem;
-}
-
-.bottom-40 {
-  bottom: 10rem;
-}
-
-.bottom-36 {
-  bottom: 9rem;
-}
-
-.-top-12 {
-  top: -3rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
 .left-6 {
   left: 1.5rem;
 }
 
-.-top-16 {
-  top: -4rem;
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-12 {
+  grid-column: span 12 / span 12;
+}
+
+.col-span-1 {
+  grid-column: span 1 / span 1;
 }
 
 .mx-4 {
@@ -642,20 +626,20 @@ a {
   margin-left: -1rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
 .mb-24 {
   margin-bottom: 6rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .block {
@@ -666,12 +650,20 @@ a {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
 
 .h-1 {
   height: 0.25rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-3 {
@@ -688,14 +680,6 @@ a {
 
 .h-full {
   height: 100%;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-28 {
-  height: 7rem;
 }
 
 .w-24 {
@@ -734,10 +718,6 @@ a {
   flex-basis: 75%;
 }
 
-.basis-1\/2 {
-  flex-basis: 50%;
-}
-
 .-rotate-45 {
   --tw-rotate: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -745,6 +725,10 @@ a {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -767,12 +751,20 @@ a {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -817,6 +809,12 @@ a {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .divide-x > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-x-reverse: 0;
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
@@ -842,6 +840,10 @@ a {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-b {
@@ -871,24 +873,19 @@ a {
   background-color: rgb(221 221 221 / var(--tw-bg-opacity));
 }
 
+.bg-vage-melon {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 211 105 / var(--tw-bg-opacity));
+}
+
 .bg-vage-red {
   --tw-bg-opacity: 1;
   background-color: rgb(188 26 69 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-vage-white {
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-.bg-vage-melon {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 211 105 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -929,6 +926,10 @@ a {
      object-fit: cover;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -949,6 +950,11 @@ a {
   padding-bottom: 0.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -959,9 +965,9 @@ a {
   padding-bottom: 1.5rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pl-10 {
@@ -1006,14 +1012,14 @@ a {
   line-height: 1.25rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -1073,10 +1079,6 @@ a {
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.file\:w-24::file-selector-button {
-  width: 6rem;
 }
 
 .hover\:bg-rose-600:hover {
@@ -1152,31 +1154,13 @@ a {
   opacity: 0.5;
 }
 
-@media (min-width: 640px) {
-  .sm\:-top-8 {
-    top: -2rem;
-  }
-
-  .sm\:-top-16 {
-    top: -4rem;
-  }
-
-  .sm\:block {
-    display: block;
-  }
-}
-
 @media (min-width: 768px) {
-  .md\:-top-8 {
-    top: -2rem;
-  }
-
-  .md\:-top-16 {
-    top: -4rem;
-  }
-
   .md\:-top-12 {
     top: -3rem;
+  }
+
+  .md\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
   .md\:block {
@@ -1199,12 +1183,12 @@ a {
     flex-basis: 50%;
   }
 
-  .md\:basis-1\/4 {
-    flex-basis: 25%;
-  }
-
   .md\:basis-1\/3 {
     flex-basis: 33.333333%;
+  }
+
+  .md\:basis-1\/4 {
+    flex-basis: 25%;
   }
 
   .md\:basis-2\/3 {
@@ -1223,6 +1207,10 @@ a {
 
   .lg\:bottom-0 {
     bottom: 0px;
+  }
+
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
   }
 
   .lg\:flex {
@@ -1257,12 +1245,12 @@ a {
     width: 11rem;
   }
 
-  .lg\:basis-1\/3 {
-    flex-basis: 33.333333%;
-  }
-
   .lg\:basis-1\/2 {
     flex-basis: 50%;
+  }
+
+  .lg\:basis-1\/3 {
+    flex-basis: 33.333333%;
   }
 
   .lg\:flex-row {
